statistic pages added

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Marcha",
+  "name": "Marcha Preview",
   "icons": [
     {
       "src": "marcha-240-192.ico",
